--- a/index/Home/View/Teacherindex/index.html
+++ b/index/Home/View/Teacherindex/index.html
@@ -107,8 +107,8 @@
 		<!-- 头部 -->
 		 <div class="header">
         <div class="container">
-            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>欢迎您系统</h2>
-            <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/quit">退出</a> </p>
+            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>教师主页</h2>
+            <p style="color:#ddd;font-size:24px; line-height:48px">{$login.teachername}<a href="__URL__/quit">退出</a> </p>
         </div>
     </div>
 
@@ -116,7 +116,7 @@
 		<div class="container login-wrapper">
 			<div class="panel panel-default bg-transparent">
 					<div class="panel-heading bg-transparent">
-							<h3 class="panel-title">分组</h3>
+							<h3 class="panel-title">可执行任务列表</h3>
 					</div>
 					<div id="function-boxs" class="panel-body bg-transparent">
 						<a class="function-box color1">
