--- a/index/Home/View/Teacherlogin/index.html
+++ b/index/Home/View/Teacherlogin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>登录</title>
+    <title>教师登录</title>
     <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 
@@ -42,8 +42,8 @@
 <!-- 头部 -->
 <div class="header">
     <div id="vm" class="container">
-        <h2 style="font-size:50px"><span class="glyphicon glyphicon-home">DDD系统</span></h2>
-        <p style="color:#ddd;font-size:24px; line-height:48px">欢迎您</p>
+        <h2 style="font-size:50px"><span class="glyphicon glyphicon-home">结题与答辩管理系统</span></h2>
+        <p style="color:#ddd;font-size:24px; line-height:48px">教师登录页</p>
     </div>
 </div>
 
