--- a/index/Home/View/Reviewjudge/index.html
+++ b/index/Home/View/Reviewjudge/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>指导学生总览</title>
+	<title>审阅学生总览</title>
 	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -47,7 +47,7 @@
 		<!-- 头部 -->
 		 <div class="header">
         <div class="container">
-            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>指导学生总览</h2>
+            <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>审阅学生总览</h2>
             <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/../teacherindex">返回</a></p>
         </div>
     </div>
@@ -56,7 +56,7 @@
 		<div class="container login-wrapper">
 			<div class="panel panel-default bg-transparent">
 					<div class="panel-heading bg-transparent">
-							<h3 class="panel-title">指导学生表</h3>
+							<h3 class="panel-title">审阅学生表</h3>
 					</div>
 					<div class="panel-body bg-transparent">
 							<table class="table table-hover">
@@ -79,7 +79,7 @@
 												<td>{$v.stuname} </td>
 												<td>未评价</td>
 												<td title="{$v['judgement']['comment']}">{$v['judgement']['comment']}</td>
-												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}结题情况">去评价</a></td>
+												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}论文情况">去评价</a></td>
 											</tr>
 
 											<elseif  condition="$v['judgement']['permission'] eq 0" />
@@ -87,7 +87,7 @@
 												<td>{$v.stuname}</td>
 												<td>未通过</td>
 												<td title="{$v['judgement']['comment']}">{$v['judgement']['comment']}</td>
-												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}结题情况">去评价</a></td>
+												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}论文情况">去评价</a></td>
 											</tr>
 
 											<else />
@@ -95,7 +95,7 @@
 												<td>{$v.stuname}</td>
 												<td>通过</td>
 												<td title="{$v['judgement']['comment']}">{$v['judgement']['comment']}</td>
-												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}结题情况">去评价</a></td>
+												<td><a href="__URL__/judging/stuid/{$v.stuid}" title="{$v.stuname}论文情况">去评价</a></td>
 											</tr>
 
 										</if>
