--- a/index/Home/View/Teachingsecretary/index.html
+++ b/index/Home/View/Teachingsecretary/index.html
@@ -108,7 +108,7 @@
 <div class="header">
     <div class="container">
         <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>教学秘书主页</h2>
-        <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/quit">退出</a></p>
+        <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/../teacherindex">退出</a></p>
     </div>
 </div>
 
