--- a/index/Home/View/Endgrouping/teachergrouping.html
+++ b/index/Home/View/Endgrouping/teachergrouping.html
@@ -125,7 +125,7 @@
   <div class="container login-wrapper" >
     <div class="panel panel-default bg-transparent" >
       <div class="panel-heading bg-transparent">
-        <h3 class="panel-title"><span class="glyphicon glyphicon-th"></span> 结题信息项填写</h3>
+        <h3 class="panel-title"><span class="glyphicon glyphicon-th"></span> 结题教师分组</h3>
       </div>
       <div class="panel-body bg-transparent">
         <div class="alert alert-danger text-center" id="warning" style="display:none"></div>
@@ -137,6 +137,8 @@
 							<div class="col-sm-9">
 								<input type="text" class="form-control js-input-group-name" name="group"+{$i} value="{$v}"/>
 							</div>
+
+
 							<div class="col-sm-1">
 								<label class="control-label">
                   <button type="button" class="glyphicon glyphicon-remove-circle js-remove close"></button>
