--- a/index/Home/View/Reviewgrouping/teachergrouping.html
+++ b/index/Home/View/Reviewgrouping/teachergrouping.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8">
-  <title>登录</title>
+  <title>审阅教师分组</title>
   <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
   <!-- <script src="https://unpkg.com/vue@2.0.1/dist/vue.js"></script> -->
@@ -104,20 +104,17 @@
     background: rgba(255,255,255,0.08);
     border: none;
   }
-  /*.glyphicon{
-  vertical-align: text-top;
-  }*/
+
   .mr15{
     margin-right: 15px;
   }
-
   </style>
 </head>
 <body>
   <!-- 头部 -->
   <div class="header">
     <div class="container">
-      <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>结题分组系统</h2>
+      <h2 style="font-size:50px"><span class="glyphicon glyphicon-home"></span>审阅分组系统</h2>
       <p style="color:#ddd;font-size:24px; line-height:48px"><a href="__URL__/../teachingsecretary">退出</a> </p>
     </div>
   </div>
@@ -125,7 +122,7 @@
   <div class="container login-wrapper" >
     <div class="panel panel-default bg-transparent" >
       <div class="panel-heading bg-transparent">
-        <h3 class="panel-title"><span class="glyphicon glyphicon-th"></span> 结题信息项填写</h3>
+        <h3 class="panel-title"><span class="glyphicon glyphicon-th"></span> 审阅教师分组</h3>
       </div>
       <div class="panel-body bg-transparent">
         <div class="alert alert-danger text-center" id="warning" style="display:none"></div>
